@@ -14,6 +14,7 @@ export(fade)
 export(fart)
 export(filterMS)
 export(filterSoundByMS)
+export(findInflections)
 export(flatEnv)
 export(flatSpectrum)
 export(formant_app)
@@ -37,6 +38,7 @@ export(msToSpec)
 export(normalizeFolder)
 export(optimizePars)
 export(osc)
+export(pitchDescriptives)
 export(pitchSmoothPraat)
 export(pitch_app)
 export(playme)
