@@ -1,7 +1,7 @@
 ## Test environments
 * local Linux Mint 20.1, R 4.0.2
 * rhub:
-  - Ubuntu Linux 16.04 LTS, R-release, GCC
+  - Ubuntu Linux 20.04.1 LTS, R-release, GCC
   - Windows Server 2008 R2 SP1, R-devel
 * check_win_devel
 
@@ -9,9 +9,9 @@
 One NOTE on all platforms:
 ------
 * checking installed package size ... NOTE
-  installed size is  7.0Mb
+  installed size is  7.2Mb
   sub-directories of 1Mb or more:
-    doc   4.9Mb
+    doc   5.1Mb
 Comment: I do have two large vignettes (the .Rmd text alone is ~200 KB, plus illustrations).
     
 * checking examples ... NOTEs (on Linux in rhub)
