@@ -37,8 +37,8 @@ NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, 238, 285, 361, 374, 375, 375,
 946, 1021, 1021, 1026, 1086, 1131, 1131, 1146, 1130, 1172, 1240, 1172, 1117,
 1103, 1026, 1026, 966, 919, 946, 882, 832, NA, NA, NA, NA, NA, NA, NA, NA,
 NA, NA)
-pitch_sm = pitchSmoothPraat(pitch, bandwidth = 2,
-                            samplingRate = 39.57244, plot = TRUE)
+pitchSmoothPraat(pitch, bandwidth = 10, samplingRate = 40, plot = TRUE)
+pitchSmoothPraat(pitch, bandwidth = 2, samplingRate = 40, plot = TRUE)
 }
 \seealso{
 \code{\link{analyze}}
