@@ -1,0 +1,27 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/utilities_pitch_postprocessing.R
+\name{timeSeriesSummary}
+\alias{timeSeriesSummary}
+\title{Time series summary}
+\usage{
+timeSeriesSummary(x, step, inflThres = NULL, plot = FALSE)
+}
+\arguments{
+\item{x}{numeric vector}
+
+\item{step}{time step in s}
+
+\item{inflThres}{minimum difference (in semitones) between consecutive
+extrema to consider them inflections; to apply a different threshold at
+each smoothing level, provide \code{inflThres} as a vector of the same
+length as \code{smoothBW}}
+
+\item{plot}{if TRUE, plots the inflections for manual verification}
+}
+\description{
+Internal soundgen function
+}
+\details{
+A helper function called by .pitchDescriptives for each smoothing level.
+}
+\keyword{internal}
